[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/Environment/Cofre/unlocked/3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Environment/Cofre/unlocked/2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Environment/Cofre/Idle/1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Environment/Cofre/unlocked/4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Environment/Cofre/unlocked/5.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Environment/Cofre/unlocked/6.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Environment/Cofre/unlocked/1.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Cofre.gd" type="Script" id=8]
[ext_resource path="res://Assets/Sounds/win.mp3" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "Unlocked",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.5, 12 )

[node name="Cofre" type="Node2D"]
script = ExtResource( 8 )

[node name="CofreAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idle"

[node name="Area2D" type="Area2D" parent="CofreAnimation"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CofreAnimation/Area2D"]
position = Vector2( 0.5, 4 )
shape = SubResource( 1 )

[node name="Sound" type="Node" parent="."]

[node name="Win" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="CofreAnimation/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
